--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+package-lock.json
+
 # compiled output
 /dist
 /dist-server
@@ -10,6 +12,7 @@
 /node_modules
 
 # IDEs and editors
+/.vscode
 /.idea
 .project
 .classpath
