--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/victorpereiradepaula/learning-angular5.git"
+    "url": "https://github.com/victorpereiradepaula/learning-angular5.git"
   },
   "keywords": [
     "[Angular",
@@ -59,5 +59,5 @@
   "bugs": {
     "url": "https://github.com/victorpereiradepaula/learning-angular5/issues"
   },
-  "homepage": "https://github.com/victorpereiradepaula/learning-angular5#readme",
+  "homepage": "https://github.com/victorpereiradepaula/learning-angular5#readme"
 }
