--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ install:
   - npm install
 script:
   - ng build --prod --output-path docs --base-href && cd docs && cp index.html 404.html && cd ..
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  locar-dir: docs
+  on:
+    branch: master
