--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ install:
   - npm install
 script:
   - ng build --prod --output-path docs --base-href && cd docs && cp index.html 404.html && cd ..
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: GITHUB_TOKEN
-  keep-history: true
-  locar-dir: docs
-  on:
-    branch: master
+# deploy:
+#   provider: pages
+#   skip-cleanup: true
+#   github-token: GITHUB_TOKEN
+#   keep-history: true
+#   locar-dir: docs
+#   on:
+#     branch: master
